<resources>
    <string name="app_name">Movie</string>
    <string name="lbl_search">Search</string>
    <string name="content_banner_movie_name">Avengers:Endgame 2019 \nOfficial Review.</string>
    <string name="lbl_best_popular_films_and_serials">BEST POPULAR FILMS AND SERIALS</string>
    <string name="lbl_spider_man_no_way_home">Spider-Man:No Way Home</string>
    <string name="lbl_check_movie_showtimes">Check Movie\nShowtimes</string>
    <string name="lbl_see_more"><u>SEE MORE</u></string>
    <string name="lbl_show_cases">SHOW CASES</string>
    <string name="lbl_more_showcases"><u>MORE SHOWCASES</u></string>
    <string name="lbl_showcases_date">10 OCTOBER 2021</string>
    <string name="lbl_showcase_movieName">Black Widow</string>
    <string name="lbl_best_actors">BEST ACTORS</string>
    <string name="lbl_more_actors"><u>MORE ACTORS</u></string>
    <string name="lbl_chris_hemsworth">Chris Hemsworth</string>
    <string name="lbl_like_movies">YOU LIKE 5 MOVIES</string>
    <string name="lbl_movie_name">Doctor Strange in the Multiverse \nof Madness</string>
    <string name="lbl_movie_rating">9,75</string>
    <string name="lbl_votes">38876 VOTES</string>
    <string name="lbl_year">2022</string>
    <string name="lbl_time">2h 6min</string>
    <string name="lbl_action">Action</string>
    <string name="lbl_adventure">Adventure</string>
    <string name="lbl_storyline">STORYLINE</string>
    <string name="content_storyLine">Doctor Strange teams up with a mysterious teenage girl from his dreams who can travel across multiverses, to battle multiple threats, including other-universe versions of himself, which threaten to wipe out millions across the multiverse.</string>
    <string name="lbl_play_trailer">play trailer</string>
    <string name="lbl_rate_movie">rate movie</string>
    <string name="lbl_actors">ACTORS</string>
    <string name="lbl_creators">CREATORS</string>
    <string name="lbl_more_creators"><u>MORE CREATORS</u></string>
    <string name="lbl_about_film">ABOUT FILM</string>
    <string name="lbl_original_title">Original Title:</string>
    <string name="lbl_type">Type:</string>
    <string name="content_type">Action, Adventure</string>
    <string name="lbl_production">Production:</string>
    <string name="production_content">Marvel Studios</string>
    <string name="lbl_premiere">Premiere:</string>
    <string name="content_premiere">6 May 2022 (USA)</string>
    <string name="lbl_description">Description:</string>
    <string name="content_description">Doctor Strange in the Multiverse of Madness is a 2022 superhero film, based on the Marvel Comics superhero of the same name. The film is a sequel to Doctor Strange, Avengers: Endgame and WandaVision. It is the twenty-eighth film in the Marvel Cinematic Universe and the eleventh installment of Phase Four.</string>
</resources>