<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activities.MainActivity"
    android:background="@color/colorPrimary">

    <com.google.android.material.appbar.AppBarLayout
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize">


        <com.google.android.material.appbar.MaterialToolbar
            android:id="@+id/toolBar"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@color/colorPrimaryDark"
            app:title="Discover"
            app:titleTextColor="@color/white"
            app:titleCentered="true"/>

    </com.google.android.material.appbar.AppBarLayout>

    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_behavior="com.google.android.material.appbar.AppBarLayout$ScrollingViewBehavior">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <androidx.viewpager2.widget.ViewPager2
                android:id="@+id/viewPager_banner"
                android:layout_width="match_parent"
                android:layout_height="@dimen/height_banner"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <com.tbuonomo.viewpagerdotsindicator.DotsIndicator
                android:id="@+id/dotsIndicator_banner"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/margin_medium"
                app:dotsColor="@android:color/darker_gray"
                app:dotsCornerRadius="3dp"
                app:dotsSize="@dimen/margin_card_medium"
                app:dotsSpacing="@dimen/margin_small"
                app:dotsWidthFactor="1.0"
                app:layout_constraintBottom_toBottomOf="@+id/viewPager_banner"
                app:layout_constraintEnd_toEndOf="@+id/viewPager_banner"
                app:layout_constraintStart_toStartOf="@+id/viewPager_banner"
                app:progressMode="false"
                app:selectedDotColor="@color/colorAccent" />

            <TextView
                android:id="@+id/tv_bestPopularFilms_title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginTop="16dp"
                android:textStyle="bold"
                android:text="@string/lbl_best_popular_films_and_serials"
                android:textColor="@color/colorSecondaryText"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/viewPager_banner" />

            <include
                android:id="@+id/vp_bestPopular_movieList"
                layout="@layout/view_pod_movie_list"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/margin_medium_2"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/tv_bestPopularFilms_title" />

            <androidx.constraintlayout.widget.ConstraintLayout
                android:id="@+id/constraintLayout_checkMovieShowTimes"
                android:layout_width="match_parent"
                android:layout_height="@dimen/height_checkTimes"
                android:layout_marginStart="@dimen/margin_medium_2"
                android:layout_marginTop="@dimen/margin_medium_3"
                android:layout_marginEnd="@dimen/margin_medium_2"
                android:background="@color/colorPrimaryLight"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/vp_bestPopular_movieList">


                <TextView
                    android:id="@+id/tv_check_movie_showtimes"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/margin_medium_2"
                    android:layout_marginTop="@dimen/margin_medium_2"
                    android:text="@string/lbl_check_movie_showtimes"
                    android:textColor="@color/white"
                    android:textSize="@dimen/text_regular_3x"
                    android:textStyle="bold"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <TextView
                    android:id="@+id/tv_seeMore"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="16dp"
                    android:layout_marginBottom="16dp"
                    android:text="@string/lbl_see_more"
                    android:textColor="@color/colorAccent"
                    android:textSize="@dimen/text_regular"
                    android:textStyle="bold"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintStart_toStartOf="parent" />

                <ImageView
                    android:id="@+id/iv_location"
                    android:layout_width="@dimen/margin_xlarge"
                    android:layout_height="@dimen/margin_xlarge"
                    android:layout_marginEnd="@dimen/margin_xlarge"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    app:srcCompat="@drawable/baseline_location_on_24" />
            </androidx.constraintlayout.widget.ConstraintLayout>

            <com.google.android.material.tabs.TabLayout
                android:id="@+id/tabLayout_genre"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/margin_medium_3"
                android:background="@color/colorPrimary"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/constraintLayout_checkMovieShowTimes"
                app:tabIndicatorColor="@color/colorAccent"
                app:tabMode="scrollable"
                app:tabSelectedTextColor="@color/white"
                app:tabTextColor="@color/colorSecondaryText" />

            <FrameLayout
                android:id="@+id/frameLayout_genre"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/colorPrimaryDark"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/tabLayout_genre">

                <include
                    android:id="@+id/vp_genre_movieList"
                    layout="@layout/view_pod_movie_list"
                    android:layout_marginTop="@dimen/margin_medium_2"
                    android:layout_marginBottom="@dimen/margin_medium_2"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content" />

            </FrameLayout>

            <TextView
                android:id="@+id/tv_showCases"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/margin_medium_2"
                android:layout_marginTop="@dimen/margin_medium_3"
                android:text="@string/lbl_show_cases"
                android:textColor="@color/colorSecondaryText"
                android:textStyle="bold"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/frameLayout_genre" />

            <TextView
                android:id="@+id/tv_more_showCases"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="@dimen/margin_medium_2"
                android:text="@string/lbl_more_showcases"
                android:textStyle="bold"
                android:textColor="@color/white"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="@+id/tv_showCases" />

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/rv_showCases"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/margin_small"
                android:clipToPadding="false"
                android:orientation="horizontal"
                android:paddingEnd="@dimen/margin_medium_2"
                android:paddingBottom="@dimen/margin_medium_3"
                app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/tv_showCases"
                tools:listitem="@layout/view_holder_showcases" />


              <include
                  android:id="@+id/vp_bestActors"
                  layout="@layout/view_pod_actor_list"
                  android:layout_width="match_parent"
                  android:layout_height="wrap_content"
                  app:layout_constraintTop_toBottomOf="@+id/rv_showCases"/>


        </androidx.constraintlayout.widget.ConstraintLayout>

    </androidx.core.widget.NestedScrollView>

</androidx.coordinatorlayout.widget.CoordinatorLayout>